# mcmanager

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  backend.rs  bin.rs  config.rs  configuration.rs  database.rs  lib.rs  main.rs  minecraft.rs  util.rs
src/api/: auth.rs  filters.rs  handlers.rs  serve.rs  socketio.rs  util.rs
src/database/: objects.rs  types.rs
src/database/objects/: group.rs  invite_link.rs  mod_loader.rs  modification.rs  user.rs  version.rs  world.rs
src/minecraft/: proxy.rs  server.rs  util.rs  velocity.rs
src/resources/: default_config.toml  default_infrarust_server_config.yml  logo.txt  server.properties  velocity_config.toml
src/resources/configs/: default_config.toml  default_fabricproxy_lite_config.toml  default_infrarust_config.yml  velocity_config.toml
src/resources/velocity/: Dockerfile  velocity.yaml
