[package]
name = "mcmanager"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
uninlined_format_args = "warn"
unused_async = "warn"
if_not_else = "warn"
default_trait_access = "warn"
manual_string_new = "warn"
manual_find = "warn"
needless_pass_by_value = "warn"
#unwrap_used = "warn"

[dependencies]
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"]}
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.0"
#rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
sqlx = {version = "0.8.6", features = ["sqlite", "chrono", "postgres", "time", "uuid", "runtime-tokio-native-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_with = { version =  "3.12.0", features = ["chrono"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.7"
config = "0.15.11"
once_cell = "1.21.0"
log = "0.4.27"
env_logger = "0.11.8"
warp-rate-limit = "0.3.0"
test-log = "0.2.17"
subprocess = "0.2.9"
reqwest = { version = "0.12.15", features = ["blocking"] }
async-trait = "0.1.88"
futures = "0.3.31"
url = { version = "2", features = ["serde"] }
uuid = {version = "1.17.0", features = ["v4", "v7", "serde"]}
duplicate = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
