[package]
name = "mcmanager"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
uninlined_format_args = "warn"
unused_async = "warn"
if_not_else = "warn"
default_trait_access = "warn"
manual_string_new = "warn"
manual_find = "warn"
needless_pass_by_value = "warn"
#unwrap_used = "warn"

[dependencies]
color-eyre = "0.6.5"
argon2 = { version = "0.5.3", features = ["std"]}
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.0"
sqlx = {version = "0.8.6", features = ["sqlite", "chrono", "postgres", "time", "uuid", "runtime-tokio-native-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version =  "3.12.0", features = ["chrono"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
config = "0.15.11"
once_cell = "1.21.0"
log = "0.4.27"
env_logger = "0.11.8"
test-log = "0.2.17"
subprocess = "0.2.9"
reqwest = { version = "0.12.15", features = ["blocking"] }
async-trait = "0.1.88"
futures = "0.3.31"
url = { version = "2", features = ["serde"] }
uuid = {version = "1.17.0", features = ["v4", "v7", "serde"]}
duplicate = "2.0.0"
static_dir = "0.2.0"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
axum-extra = { version = "0.10.1", features = ["cookie"] }
image = "0.25.6"
tokio-util = "0.7.15"
moka = { version = "0.12.10", features = ["future", "sync"] }
tower_governor = { version = "0.7.0", features = ["default", "axum", "tracing"]}
mime = "0.3.17"
mime_guess = "2.0.5"
async-recursion = "1.1.1"
dyn-clone = "1.0.19"
tokio-stream = "0.1.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
